[tool.poetry]
name = "money-keep"
version = "0.1.0"
description = "financial ledge service"
authors = ["hyeonproject <axzswq@gmail.com>"]
readme = "README.md"
packages = [{include = "money_keep"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
